Reenable the table of contents on mobile and fix styling

--- a/src/main/content/_assets/css/table-of-contents.css
+++ b/src/main/content/_assets/css/table-of-contents.css
@@ -189,9 +189,68 @@
         margin-bottom: 30px;
     }
 
-    /* Hide the table of contents and right pane in mobile view */
+    #background_container > .row {
+        margin: 0;
+    }
+
     #toc_column {
-        display: none !important;
+        display: block;
+        position: relative;
+        z-index: 0;
+        left: inherit;
+        width: auto;
+        background-color: inherit;
+        padding-bottom: 0;
+        padding-right: 15px;
+        padding-left: 15px;
+    }
+
+    #toc_inner {
+        padding-top: 0;
+    }
+
+    #toc_title {
+        font-family: inherit;
+        font-size: 20px;
+    }
+
+    #toc_title, #tag_title, #tags_container {
+        color: inherit;
+        margin-left: 0;
+    }  
+    
+    #toc_container > .sectlevel1 > li {
+        border-left: none;
+        padding-left: 0;
+    }
+
+    #toc_container > .sectlevel1 > li:hover {
+        background-color: inherit;  
+        border-left: none;      
+    }
+
+    #toc_container a {
+        display: inline-block;
+        color: #e6eda8;
+        margin-bottom: 10px;
+    }
+
+    #toc_container a:hover {
+        color: #f7fbd2;
+    }
+
+    #toc_separator {
+        display: none;
+    }
+
+    #tags_container a {
+        color: #c8d6fb;
+        margin-right: 15px;
+        line-height: 30px;
+    }
+
+    #tags_container a:hover {
+        color: #eaf0ff;
     }
 
     #breadcrumb_hamburger, #code_column, #breadcrumb_row .showHamburger {
@@ -282,6 +341,28 @@
     .navbar-nav>li>a {
         padding-top: 10px;
         padding-bottom: 10px;
+    }
+
+    /* Dropdown menu */
+    .navbar-nav .open .dropdown-menu {
+        position: static;
+        float: none;
+        width: auto;
+        margin-top: 0;
+        background-color: transparent;
+        border: 0;
+        -webkit-box-shadow: none;
+        box-shadow: none;
+    }
+
+    .container-fluid>.navbar-collapse, .container-fluid>.navbar-header, .container>.navbar-collapse, .container>.navbar-header {
+        margin-right: -15px;
+        margin-left: -15px;
+    }
+    
+    .navbar-nav {
+        float: left;
+        margin: 0 -15px;
     }
 }
 
